# src/main/kotlin/com/bluthbusters/api/modules/OpenApiServer.kt
@@ -53,5 +53,5 @@ class OpenApiServer : AbstractVerticle() {
   private fun corsHandler() = CorsHandler.create(config().getString("cors"))
     .allowCredentials(true)
     .allowedMethods(setOf(HttpMethod.GET, HttpMethod.POST, HttpMethod.PUT, HttpMethod.DELETE))
-    .allowedHeaders(setOf("authorization", "origin", "Content-Type", "accept", "Access-Control-Allow-Origin"))
+    .allowedHeaders(setOf("authorization", "origin", "Content-Type", "accept", "Access-Control-Allow-Origin", "X-Host-Timezone"))
 }
