# src/main/resources/webroot/docs/openapi.yaml
@@ -174,6 +174,12 @@ paths:
           schema:
             type: string
           required: true
+        - in: header
+          name: X-Host-Timezone
+          schema:
+            type: string
+            default: UTC
+          required: false
       requestBody:
         required: true
         content:
@@ -207,6 +213,12 @@ paths:
           schema:
             type: string
           required: true
+        - in: header
+          name: X-Host-Timezone
+          schema:
+            type: string
+            default: UTC
+          required: false
       responses:
         200:
           description: Movie returned
@@ -255,6 +267,13 @@ paths:
         - movie-rentals
       summary: Returns the amount of delayed movies for a customer
       operationId: getCustomerRentalsNotifications
+      parameters:
+        - in: header
+          name: X-Host-Timezone
+          schema:
+            type: string
+            default: UTC
+          required: false
       responses:
         200:
           description: Notifications found
